bat.bool1.in1020.In1020.scala.error
Erreur de compilation :
In1020:2: error: not found: value ||
  if (a>9 && a<21) || (b<21 && b> 9) {
                   ^